# magiceye

./: Cargo.toml  README.md
examples/mysql/: README.md  base.sql  target.sql
examples/postgres/: README.md  base.sql  target.sql
src/: config.rs  main.rs  platform_specific.rs
src/action/: init.rs  mod.rs  run.rs
src/action/run/: background.rs  tui.rs
src/action/run/steps/: check.rs  connection.rs  fetching.rs  mod.rs
src/command/: init.rs  mod.rs  run.rs
src/sql/: mod.rs  mysql.rs  postgres.rs
