[package]
name = "magiceye"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "magic eye" 
keywords = ["rdb"] 
readme = "./README.md"
repository = "https://github.com/myyrakle/magiceye" 
documentation = "https://docs.rs/magiceye/latest/magiceye" 
homepage = "https://github.com/myyrakle/magiceye/blob/master/README.md" 


[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }