[package]
name = "magiceye"
version = "0.3.2"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "database diff checker" 
keywords = ["rdb", "diff", "postgres", "mysql"] 
readme = "./README.md"
repository = "https://github.com/myyrakle/magiceye" 
documentation = "https://docs.rs/magiceye/latest/magiceye" 
homepage = "https://github.com/myyrakle/magiceye/blob/master/README.md" 

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log4rs = "1.3.0"
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.21.0", features = ["full", "time"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "mysql" ] }
crossterm = "~0.27.0"
ratatui = "~0.26.0"
chrono = "0.4.38"
anyhow = "1.0.92"
